clients/include/rocblas_fortran.hpp

// scal
rocblas_status
    rocblas_sscal_fortran(rocblas_handle handle, int n, const float* alpha, float* x, int incx);
rocblas_status
    rocblas_dscal_fortran(rocblas_handle handle, int n, const double* alpha, double* x, int incx);
rocblas_status rocblas_cscal_fortran(rocblas_handle               handle,
                                     int                          n,
                                     const rocblas_float_complex* alpha,
                                     rocblas_float_complex*       x,
                                     int                          incx);
rocblas_status rocblas_zscal_fortran(rocblas_handle                handle,
                                     int                           n,
                                     const rocblas_double_complex* alpha,
                                     rocblas_double_complex*       x,
                                     int                           incx);
rocblas_status rocblas_csscal_fortran(
    rocblas_handle handle, int n, const float* alpha, rocblas_float_complex* x, int incx);
rocblas_status rocblas_zdscal_fortran(
    rocblas_handle handle, int n, const double* alpha, rocblas_double_complex* x, int incx);
// scal_batched
rocblas_status rocblas_sscal_batched_fortran(
    rocblas_handle handle, int n, const float* alpha, float* const x[], int incx, int batch_count);
rocblas_status rocblas_dscal_batched_fortran(rocblas_handle handle,
                                             int            n,
                                             const double*  alpha,
                                             double* const  x[],
                                             int            incx,
                                             int            batch_count);
rocblas_status rocblas_cscal_batched_fortran(rocblas_handle               handle,
                                             int                          n,
                                             const rocblas_float_complex* alpha,
                                             rocblas_float_complex* const x[],
                                             int                          incx,
                                             int                          batch_count);
rocblas_status rocblas_zscal_batched_fortran(rocblas_handle                handle,
                                             int                           n,
                                             const rocblas_double_complex* alpha,
                                             rocblas_double_complex* const x[],
                                             int                           incx,
                                             int                           batch_count);
rocblas_status rocblas_csscal_batched_fortran(rocblas_handle               handle,
                                              int                          n,
                                              const float*                 alpha,
                                              rocblas_float_complex* const x[],
                                              int                          incx,
                                              int                          batch_count);
rocblas_status rocblas_zdscal_batched_fortran(rocblas_handle                handle,
                                              int                           n,
                                              const double*                 alpha,
                                              rocblas_double_complex* const x[],
                                              int                           incx,
                                              int                           batch_count);
// scal_strided_batched
rocblas_status rocblas_sscal_strided_batched_fortran(rocblas_handle handle,
                                                     int            n,
                                                     const float*   alpha,
                                                     float*         x,
                                                     int            incx,
                                                     rocblas_stride stride_x,
                                                     int            batch_count);
rocblas_status rocblas_dscal_strided_batched_fortran(rocblas_handle handle,
                                                     int            n,
                                                     const double*  alpha,
                                                     double*        x,
                                                     int            incx,
                                                     rocblas_stride stride_x,
                                                     int            batch_count);
rocblas_status rocblas_cscal_strided_batched_fortran(rocblas_handle               handle,
                                                     int                          n,
                                                     const rocblas_float_complex* alpha,
                                                     rocblas_float_complex*       x,
                                                     int                          incx,
                                                     rocblas_stride               stride_x,
                                                     int                          batch_count);
rocblas_status rocblas_zscal_strided_batched_fortran(rocblas_handle                handle,
                                                     int                           n,
                                                     const rocblas_double_complex* alpha,
                                                     rocblas_double_complex*       x,
                                                     int                           incx,
                                                     rocblas_stride                stride_x,
                                                     int                           batch_count);
rocblas_status rocblas_csscal_strided_batched_fortran(rocblas_handle         handle,
                                                      int                    n,
                                                      const float*           alpha,
                                                      rocblas_float_complex* x,
                                                      int                    incx,
                                                      rocblas_stride         stride_x,
                                                      int                    batch_count);